# rule_composer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
dependencies/: CMakeLists.txt
rule_composer_core/: CMakeLists.txt
rule_composer_core/config/: config.json
rule_composer_core/defs/app/: app_options.hpp  application.hpp
rule_composer_core/src/app/: app_options.cpp  application.cpp  main.cpp
